kubernetes/apps/observability/gatus/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
    - name: envoy-internal
      namespace: network
      sectionName: http
  hostnames:
    - status.${DOMAIN}
  rules:
    - backendRefs:
        - name: gatus
          namespace: observability
          port: 8080
